--- a/projects/wip/hipstring/beta/style.css
+++ b/projects/wip/hipstring/beta/style.css
@@ -5,10 +5,6 @@ body{
 }
 .navbar .brand{
     margin: 0px;
-    padding: 10px 20px;
-}
-.nav{
-    right: 10px;
 }
 .main-container{
     margin: 0px auto;
@@ -28,7 +24,7 @@ body{
     margin: 0px auto;
     text-align: center;
     display: inline-block;
-    white-space: nowrap;
+    //white-space: nowrap;
 }
 .judgeArea{
     margin-top: 5px;
