--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -14,7 +14,7 @@ body{
     margin-bottom: 0px;
 }
 .selectedSound-container{
-    width: 500px;
+    max-width: 500px;
     height: 100%;
     min-height: 740px;
     background: url(img/bg.png);
@@ -45,7 +45,7 @@ body{
     }
 }
 .selectedSound{
-    width: 500px;
+    max-width: 500px;
     height: 100%;
     min-height: 740px;
     background: rgba(30,30,30,0.6);
@@ -54,6 +54,7 @@ body{
 }
 .soundplayer{
     width: 450px;
+    max-width: 100%;
     display: inline-block;
     margin: 10px auto;
     position: relative;
@@ -78,6 +79,7 @@ li {
 .voting a {
     display: inline-block;
     width: 190px;
+    max-width: 42%;
     height: 45px;
     line-height: 45px;
     background: rgba(210,210,210,0.9);
@@ -147,7 +149,8 @@ li {
     border-bottom: none;
 }
 .sharing {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     margin: auto;
     text-align: center;
     position: absolute;
@@ -155,6 +158,7 @@ li {
 }
 .sharing a {
     width: 175px;
+    max-width: 40%;
     height: 40px;
     line-height: 40px;
     margin: 0px 15px;
