--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -1,5 +1,10 @@
+html{
+    width: 100%;
+    height: 100%;
+}
 body{
     width: 100%;
+    height: 100%;
     padding-top: 40px;
     text-align: center;
 }
