--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -1,10 +1,10 @@
-html{
+html, .main-container{
     max-width: 100%;
-    max-height: 100%;
+    height: 100%;
 }
 body{
     max-width: 100%;
-    max-height: 100%;
+    height: 100%;
     padding-top: 40px;
     text-align: center;
 }
@@ -17,7 +17,7 @@ body{
 }
 .selectedSound-container{
     max-width: 500px;
-    max-height: 100%;
+    height: 100%;
     min-height: 740px;
     background: url(img/bg.png);
 }
@@ -49,7 +49,7 @@ body{
 }
 .selectedSound{
     max-width: 500px;
-    max-height: 100%;
+    height: 100%;
     min-height: 740px;
     background: rgba(30,30,30,0.6);
     -webkit-animation: bg-pulse 5s infinite;
