--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -1,12 +1,19 @@
-html, .main-container{
+html{
     max-width: 100%;
     height: 100%;
 }
 body{
     max-width: 100%;
     height: 100%;
-    padding-top: 40px;
     text-align: center;
+}
+.main-container{
+    position: absolute;
+    top: 40px;
+    bottom: 0px;
+}
+.main-container, selectedSound-container, selectedSound, color-bg{
+    min-height: 740px;
 }
 .navbar .brand{
     margin: 0px;
@@ -18,13 +25,11 @@ body{
 .selectedSound-container{
     max-width: 500px;
     height: 100%;
-    min-height: 740px;
     background: url(img/bg.png);
 }
 .color-bg{
     width: 100%;
     height: 100%;
-    min-height: 740px;
 }
 .moving-circle{
     position: absolute;
@@ -50,7 +55,6 @@ body{
 .selectedSound{
     max-width: 500px;
     height: 100%;
-    min-height: 740px;
     background: rgba(30,30,30,0.6);
     -webkit-animation: bg-pulse 5s infinite;
     position: relative;
