--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -1,14 +1,15 @@
 html{
-    max-width: 100%;
+    width: 100%;
     height: 100%;
 }
 body{
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     text-align: center;
 }
 .main-container{
     position: absolute;
+    width: 100%;
     top: 40px;
     bottom: 0px;
 }
