--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -11,12 +11,19 @@ body{
 .main-container{
     position: absolute;
     width: 100%;
-    top: 40px;
+    top: 41px;
     bottom: 0px;
     padding-bottom: 40px;
 }
 .main-container, selectedSound-container, selectedSound, color-bg{
     min-height: 740px;
+}
+.navbar{
+    max-width: 100%;
+    margin: 0px;
+}
+.navbar .navbar-inner{
+    padding-right: 0px;
 }
 .navbar .brand{
     margin: 0px;
