--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -16,6 +16,12 @@ body{
 }
 .main-container, selectedSound-container, selectedSound, color-bg{
     min-height: 740px;
+    max-width: 500px;
+}
+@media (max-width: 640px) {
+.main-container, selectedSound-container, selectedSound, color-bg{
+    max-width: 640px;
+}
 }
 .navbar{
     max-width: 100%;
@@ -32,7 +38,6 @@ body{
     margin-bottom: 0px;
 }
 .selectedSound-container{
-    max-width: 500px;
     height: 100%;
     background: url(img/bg.png);
 }
@@ -62,14 +67,13 @@ body{
     }
 }
 .selectedSound{
-    max-width: 500px;
     height: 100%;
     background: rgba(30,30,30,0.6);
     -webkit-animation: bg-pulse 5s infinite;
     position: relative;
 }
 .soundplayer{
-    width: 450px;
+    width: 90%;
     max-width: 100%;
     display: inline-block;
     margin: 10px auto;
@@ -80,7 +84,7 @@ li {
     list-style-type: none;
 }
 .options-container {
-    max-width: 450px;
+    max-width: 90%;
     margin: auto;
     text-align: center;
     display: inline-block;
@@ -171,7 +175,7 @@ li {
 }
 .sharing {
     width: 100%;
-    max-width: 500px;
+    max-width: 100%;
     margin: auto;
     text-align: center;
     position: absolute;
