--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -26,6 +26,7 @@ body{
 .navbar{
     max-width: 100%;
     margin: 0px;
+    font-family: 'Sue Ellen Francisco', cursive;
 }
 .navbar .navbar-inner{
     padding-right: 0px;
@@ -112,6 +113,8 @@ li {
     color: #555;
     text-decoration: none;
     cursor: pointer;
+    font-family: 'Sue Ellen Francisco', cursive;
+    font-size: 22px;
 }
 .voting a:hover {
     box-shadow: 0px 0px 3px 1px #3A8BE8;
@@ -133,6 +136,8 @@ li {
     margin: 10px;
     cursor: pointer;
     position: relative;
+    font-family: 'Sue Ellen Francisco', cursive;
+    font-size: 20px;
 }
 .elements li:hover{
     background: rgba(0,0,0,0.6);
