--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -26,7 +26,7 @@ body{
 .navbar{
     max-width: 100%;
     margin: 0px;
-    font-family: 'Sue Ellen Francisco', cursive;
+    font-family: 'Oxygen';
 }
 .navbar .navbar-inner{
     padding: 0px;
@@ -119,7 +119,7 @@ li {
     color: #555;
     text-decoration: none;
     cursor: pointer;
-    font-family: 'Sue Ellen Francisco', cursive;
+    font-family: 'Oxygen';
     font-size: 22px;
 }
 .voting a:hover {
@@ -143,7 +143,7 @@ li {
     margin: 10px;
     cursor: pointer;
     position: relative;
-    font-family: 'Sue Ellen Francisco', cursive;
+    font-family: 'Oxygen';
     font-size: 20px;
 }
 .elements li:hover{
@@ -227,6 +227,7 @@ li {
     max-width: 40%;
     height: 40px;
     line-height: 40px;
+    font-family: 'Oxygen';
     margin: 0px 15px;
     display: inline-block;
     position: relative;
