--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -26,7 +26,7 @@ body{
 .navbar{
     max-width: 100%;
     margin: 0px;
-    font-family: 'Oxygen';
+    font-family: 'Lato';
 }
 .navbar .navbar-inner{
     padding: 0px;
@@ -119,8 +119,8 @@ li {
     color: #555;
     text-decoration: none;
     cursor: pointer;
-    font-family: 'Oxygen';
-    font-size: 22px;
+    font-family: 'Lato';
+    font-size: 18px;
 }
 .voting a:hover {
     box-shadow: 0px 0px 3px 1px #3A8BE8;
@@ -143,8 +143,9 @@ li {
     margin: 10px;
     cursor: pointer;
     position: relative;
-    font-family: 'Oxygen';
-    font-size: 20px;
+    font-family: 'Lato';
+    font-weight: 100;
+    font-size: 17px;
 }
 .elements li:hover{
     background: rgba(38,29,29,0.6);
@@ -227,7 +228,7 @@ li {
     max-width: 40%;
     height: 40px;
     line-height: 40px;
-    font-family: 'Oxygen';
+    font-family: 'Lato';
     margin: 0px 15px;
     display: inline-block;
     position: relative;
