--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -157,7 +157,7 @@ li {
 @media (min-width: 480px){
 .elements li.positive:after{
     content: "You like this aspect";
-    font-size: 11px;
+    font-size: 10px;
     height: 12px;
     line-height: 12px;
     position: absolute;
@@ -177,7 +177,7 @@ li {
 @media (min-width: 480px){
 .elements li.negative:after{
     content: "You don't like this aspect";
-    font-size: 11px;
+    font-size: 10px;
     height: 12px;
     line-height: 12px;
     position: absolute;
@@ -220,11 +220,11 @@ li {
     max-width: 500px;
     margin: auto;
     text-align: center;
-    position: fixed;
-    bottom: 0px;
+    margin-bottom: 15px;
+
 }
 .sharing a {
-    width: 175px;
+    width: 170px;
     max-width: 40%;
     height: 40px;
     line-height: 40px;
@@ -292,6 +292,6 @@ li {
 }
 
 @media (max-width: 979px) {
-.selectedSound-container, .sharing{
+.selectedSound-container{
     position: absolute;
 }
