--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -78,12 +78,13 @@ body{
     background: rgba(30,30,30,0.6);
     -webkit-animation: bg-pulse 5s infinite;
     position: relative;
+    overflow: auto;
 }
 .soundplayer{
     width: 90%;
     max-width: 100%;
     display: inline-block;
-    margin: 10px auto;
+    margin: 10px auto 0px;
     position: relative;
     z-index: 10;
 }
