shrink font on small screens

--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -283,6 +283,12 @@ li {
 .more-tracks{
     display: none;
 }
+.elements li {
+    font-size: 15px;
+}
+.voting a {
+    font-size: 16px;
+}
 }
 
 @media (min-width: 1100px) {
