--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -218,6 +218,11 @@ li {
 .elements .info:hover{
     opacity: 0.95;
 }
+.stats p {
+    color: #eee;
+    text-shadow: 1px 1px #333;
+    font-family: "Lato";
+}
 .sharing {
     width: 100%;
     max-width: 500px;
