--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -121,7 +121,7 @@ li {
     text-decoration: none;
     cursor: pointer;
     font-family: 'Lato';
-    font-size: 18px;
+    font-size: 16px;
 }
 .voting a:hover {
     box-shadow: 0px 0px 3px 1px #3A8BE8;
@@ -144,9 +144,9 @@ li {
     margin: 10px;
     cursor: pointer;
     position: relative;
-    font-family: 'Lato';
-    font-weight: 100;
-    font-size: 17px;
+    font-family: 'Wire One';
+
+    font-size: 24px;
 }
 .elements li:hover{
     background: rgba(255,220,99,0.5);
@@ -289,7 +289,7 @@ li {
     display: none;
 }
 .elements li {
-    font-size: 14px;
+    font-size: 20px;
 }
 .voting a {
     font-size: 14px;
