--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -261,9 +261,11 @@ li {
 }
 .more-tracks{
     background: black;
-    min-height: 100%;
+    min-height: 740px;
+    height: 100%;
     margin-left: 500px;
     display: inline-block;
+    overflow: auto;
 }
 .more-tracks h2{
     margin: 0px;
