--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -268,7 +268,11 @@ li {
     overflow: auto;
 }
 .more-tracks h2{
-    margin: 0px;
+    margin: 5px auto 0px;
+    padding: 0px 20px;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: center;
 }
 .more-tracks .tracks-container .track{
     display: inline-block;
