--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -12,8 +12,12 @@ body{
 .main-container{
     position: absolute;
     width: 100%;
-    top: 41px;
+    top: 50px;
     bottom: 0px;
+}
+.container{
+    padding: 0;
+    margin: 0;
 }
 .selectedSound-container, .selectedSound, .color-bg{
     min-height: 740px;
@@ -25,12 +29,16 @@ body{
 
 .navbar{
     max-width: 100%;
-    margin: 0px;
+    /*margin: 0px;*/
     font-family: 'Lato';
 }
-.navbar .navbar-inner{
+.navbar{
     padding: 0px;
     background: #261D1D;
+}
+.navbar * {
+    height: 40px;
+    min-height: 40px;
 }
 .navbar .brand{
     margin: 0px;
