smaller font for small screens

--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -382,9 +382,9 @@ li {
 .more-tracks{
     display: none;
 }
-/*.elements li {
-    font-size: 24px;
-}*/
+.elements li {
+    font-size: 16px;
+}
 .voting a {
     font-size: 14px;
 }
