--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -205,8 +205,51 @@ li {
     line-height: 0px;
     opacity: 0.7;
 }
+.elements .voting-stats {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 0;
+    top: -5px;
+    display: none;
+
+}
+.elements .voting-stats > div{
+    height: 20px;
+    text-align: left;
+    margin-left: 18px;
+}
+.elements .voting-stats > div > *{
+    display: inline-block;
+}
+.elements .voting-stats i{
+    vertical-align: middle;
+}
+.elements .voting-stats .bar{
+    background-color: white;
+    margin: 0px 5px;
+    height: 10px;
+    width: 70%;
+}
+.elements .voting-stats span{
+    font-size: 12px;
+}
+.elements .stats-toggle{
+    display: none;
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    width: 20px;
+    height: 20px;
+    line-height: 0px;
+    opacity: 0.7;
+    z-index: 1;
+}
+.elements .rated .stats-toggle{
+    display: inline-block;
+}
 @media (max-width: 640px) {
-.elements .info:after{
+.elements .info:after, .elements .stats-toggle:after{
     content: "";
     position: absolute;
     background: rgba(0,0,0,0);
@@ -217,7 +260,7 @@ li {
     left: -10px;
 }
 }
-.elements .info:hover{
+.elements .info:hover, .elements .stats-toggle:hover{
     opacity: 0.95;
 }
 .stats p {
