--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -9,6 +9,9 @@ body{
     text-align: center;
     position: relative;
 }
+[class^="icon-"], [class*=" icon-"]{
+    font-size: 13px;
+}
 .main-container{
     position: absolute;
     width: 100%;
