--- a/projects/wip/hipstring/2.0/style.css
+++ b/projects/wip/hipstring/2.0/style.css
@@ -15,7 +15,7 @@ body{
 .main-container{
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: visible;
 }
 .selectedSound-container, .selectedSound, .color-bg, .more-tracks{
     min-height: 740px;
