--- a/projects/wip/hipstring/3.0/style.css
+++ b/projects/wip/hipstring/3.0/style.css
@@ -44,14 +44,29 @@ nav ul.nav.pull-right {
 	background-color: #6398E8;
 }
 
+.main-container {
+	display: block;
+	overflow: hidden;
+	width: auto;
+}
+
 .soundplayer {
 	margin: 15px;
 }
+.main-container .cta {
+	margin-left: 15px;
+	margin-right: 30px;
+}
+.main-container .cta p:last-child {
+	color: #9B7323;
+	border-bottom: 1px solid #6398E8;
+}
 .attribute {
-	width: 40%;
+	width: 46%;
 	display: inline-block;
 	float: left;
 	margin-left: 15px;
+	margin-right: 15px;
 	margin-bottom: 6px;
 }
 .attribute > h2 {
@@ -78,6 +93,12 @@ nav ul.nav.pull-right {
 .attribute > h2:hover {
 	color: #6398E8;
 }
+.attribute > h2 .glyphicon {
+	color: #261D1D;
+	font-size: 14px;
+	margin-top: -6px;
+	vertical-align: middle;
+}
 .attribute .voting .vote {
 	cursor: pointer;
 	display: inline-block;
@@ -98,4 +119,16 @@ nav ul.nav.pull-right {
 }
 .attribute .voting .negative:hover .glyphicon {
 	color: rgb(217,87,76);
+}
+
+aside {
+	float: left;
+	display: inline-block;
+	height: 100%;
+	width: 80px;
+	transition: width 1s;
+	background: #999;
+}
+aside:hover {
+	width: 25%;
 }
