--- a/projects/wip/hipstring/3.0/style.css
+++ b/projects/wip/hipstring/3.0/style.css
@@ -122,13 +122,117 @@ nav ul.nav.pull-right {
 }
 
 aside {
+	overflow: auto;
 	float: left;
 	display: inline-block;
 	height: 100%;
-	width: 80px;
+	width: 60px;
+	max-width: 150px;
 	transition: width 1s;
-	background: #999;
+	background: #eae9ea;
+	border-right: 1px solid #555;
 }
 aside:hover {
 	width: 25%;
+	max-width: 150px;
+}
+
+.more-tracks .tracks-container .track{
+    display: inline-block;
+    max-width: 150px;
+    width: 100%;
+    height: auto;
+    min-width: 60%;
+    padding: 4px;
+    margin: auto;
+    text-align: left;
+    position: relative;
+}
+.more-tracks .track .cover-container{
+    display: block;
+    position: relative;
+    margin: auto;
+    text-align: center;
+}
+.more-tracks .tracks-container .track img {
+    cursor: pointer;
+    height: auto;
+    max-width: 100%;
+    border: 1px solid #261D1D;
+	box-shadow: 0 0 4px 0px #261D1D;
+}
+.more-tracks .track span {
+	display: none;
+}
+.more-tracks:hover .track span{
+    display: block;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+}
+.track .title{
+    color: #261D1D;
+    margin-top: 8px;
+}
+.track .artist{
+    color: #777;
+    font-size: 12px;
+}
+/*.more-tracks:hover .unheard:after{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0px;
+    height: 0px;
+    display: block;
+    margin: 4px;
+    padding: 0;
+    border: 15px solid transparent;
+    border-left-color: rgba(58,139,232,0.8);
+    border-top-color: rgba(58,139,232,0.8);
+}*/
+.more-tracks:hover .unheard .cover-container:after{
+    content: "NEW";
+}
+.more-tracks:hover .ur0 .cover-container:after{
+    content: "0/10";
+}.more-tracks:hover .ur1 .cover-container:after{
+    content: "1/10";
+}.more-tracks:hover .ur2 .cover-container:after{
+    content: "2/10";
+}.more-tracks:hover .ur3 .cover-container:after{
+    content: "3/10";
+}.more-tracks:hover .ur4 .cover-container:after{
+    content: "4/10";
+}.more-tracks:hover .ur5 .cover-container:after{
+    content: "5/10";
+}.more-tracks:hover .ur6 .cover-container:after{
+    content: "6/10";
+}.more-tracks:hover .ur7 .cover-container:after{
+    content: "7/10";
+}.more-tracks:hover .ur8 .cover-container:after{
+    content: "8/10";
+}.more-tracks:hover .ur9 .cover-container:after{
+    content: "9/10";
+}
+.more-tracks:hover .cover-container:after{
+    font-size: 10px;
+    color: white;
+    position: absolute;
+    bottom: -8px;
+    right: -25px;
+    left: 50%;
+    display: inline;
+    /*height: 15px;*/
+    background: rgba(58,139,232,0.65);
+    border-radius: 12px;
+    width: 50px;
+    margin-left: -25px;
+    /*margin: 0 50% 0 25px;*/
+    /*margin-right: -20px;*/
+    /*margin-left: -50%;*/
+    text-align: center;
 }
