center track text

--- a/projects/wip/hipstring/3.0/style.css
+++ b/projects/wip/hipstring/3.0/style.css
@@ -166,7 +166,7 @@ aside:hover {
 }
 .more-tracks:hover .track span{
     display: block;
-    text-align: left;
+    text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
