--- a/projects/wip/hipstring/3.0/style.css
+++ b/projects/wip/hipstring/3.0/style.css
@@ -47,8 +47,9 @@ nav ul.nav.pull-right {
 
 .main-container {
 	display: block;
-	overflow: hidden;
+	overflow: auto;
 	width: auto;
+	height: 100%;
 }
 
 .soundplayer {
@@ -69,6 +70,11 @@ nav ul.nav.pull-right {
 	margin-left: 15px;
 	margin-right: 15px;
 	margin-bottom: 6px;
+}
+@media (max-width: 830px) {
+	.attribute {
+		width: 94%;
+	}
 }
 .attribute > h2 {
 	position: relative;
