webkit prefix for transition.
also safari fix because safari can only do px-px or %-% transitions

--- a/projects/wip/hipstring/3.0/style.css
+++ b/projects/wip/hipstring/3.0/style.css
@@ -132,9 +132,11 @@ aside {
 	float: left;
 	display: inline-block;
 	height: 100%;
-	width: 60px;
+	width: 1%;
+	min-width: 60px;
 	max-width: 150px;
 	transition: width 1s;
+	-webkit-transition: width 1s;
 	background: #eae9ea;
 	border-right: 1px solid #555;
 }
