--- a/style.css
+++ b/style.css
@@ -1,76 +1,209 @@
-h1 {
-    color: #3F3030;
-    font-family: 'Glegoo', serif;
-    font-size: 72px;
-    font-weight: lighter;
-    letter-spacing: 25px;
-    text-align:center;
-    left: 0px;
-    right: 0px;
-    position: fixed;
-    z-index: 1000;
-    margin: 0px;
-    pointer-events: none;
-}
-#nametext {
-    position: relative;
-}
-#nav {
-    opacity:0;
-    z-index: 500;
-    position: fixed;
-    top: 0px;
-    left: 30px;
-    right: 30px;
-    height: 60px;
-    background: rgba(249,230,187,0.5);
-}
-#topbar {
-    position:relative;
-}
-#bar-container {
-    position: fixed;
-    left: 30px;
-    right: 30px;
-    top: 0px;
-    height: 60px;
-
-    //z-index: 99999;
-}
-#main-container {
-    width:100%;
-    left: 0px;
-}
-#nav a{
-    text-decoration: none;
-    text-align: center;
-}
-#nav img {
-    float:right;
-    padding: 10px 5px 0px 5px;
-} 
-.center {
-    text-align:justify;
-    margin: 0px auto;
-    max-width: 35em;
-}
-p {
-    font-family: Georgia, Cambria;
-    font-size: 16px;
-    line-height: 1.5em;
-    text-align: justify;
-    color: #655959;
+html,body{
+	margin: 0;
+	width: 100%;
+	height: 100%;
 }
 
-body {
-    background: url(img/debut_color.png);
+.grid-overlay {
+	display: none;
+	position: fixed;
+	pointer-events: none;
+	z-index: 100;
+	height: 100%;
+	width: 100%;
 }
-@font-face {
-    font-family: 'BLOKK';
-    src: url('fonts/BLOKKNeue-Regular.eot');
-    src: url('fonts/BLOKKNeue-Regular.eot?#iefix') format('embedded-opentype'),
-         url('fonts/BLOKKNeue-Regular.woff') format('woff'),
-         url('fonts/BLOKKNeue-Regular.svg#BLOKKNeue-Regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+.grid-overlay .grid-row{
+	height: 33.333%;
+	width: 100%;
+	border-bottom: 2px solid rgba(50,50,50,0.6);
+}
+.grid-overlay .grid-row .grid-col{
+	display: inline-block;
+	height: 100%;
+	width: 33.333%;
+	border-right: 2px solid rgba(50,50,50,0.6);
+}
+
+h1, h2, a {
+	font-family: 'Oswald', sans-serif;
+	color: #333;
+}
+.quote, p {
+	font-family: 'Vollkorn', serif;
+}
+
+.identifier {
+	position: absolute;
+	top: 47.5%;
+	width: 100%;
+}
+.avatar {
+	position: absolute;
+	left: 50%;
+	margin-top: -160px;
+	margin-left: -160px;
+	border-radius: 100%;
+	-webkit-border-radius: 100%;
+	overflow: hidden;
+}
+.avatar .social {
+	display: none;
+	height: 40px;
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	margin-top: -10px;
+	text-align: center; 
+}
+.social .link {
+	text-align: center; 
+	display: inline-block;
+	background-repeat: no-repeat;
+	position: relative;
+	z-index: 20;
+	width: 40px;
+	height: 40px;
+	margin: 0 20px;
+}
+.social .link a{
+	display: block;
+	height: 100%;
+	width: 100%;
+}
+.social .twitter {
+	background-image: url(img/twitter.png);
+}
+.social .github {
+	background-image: url(img/github.png);
+}
+.social .instagram {
+	background-image: url(img/instagram.png);
+}
+
+.avatar:hover .social {
+	display: block;
+}
+.avatar:hover .overlay{
+	border-radius: 100%;
+	-webkit-border-radius: 100%;
+	overflow: hidden;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 10;
+	background-color: rgba(50,50,50,.8);
+}
+.avatar:hover h1{
+	display: block;
+}
+.avatar img {
+	max-width: 320px;
+	height: auto;
+	border-radius: 100%;
+	-webkit-border-radius: 100%;
+}
+
+.about-me {
+	position: absolute;
+	display: none;
+	left: 50%;
+	margin-top: -160px;
+	margin-left: -160px;
+	width: 320px;
+	height: 320px;
+	-webkit-transform:rotateY(270deg);
+	transform:rotateY(270deg);
+	background-color: #999;
+	color: white;
+	-webkit-border-radius: 100%;
+	border-radius: 100%;
+	overflow: hidden;
+}
+.about-me p{
+	text-align: center;
+	padding: 15%;
+	white-space: wrap;
+}
+
+.headline{
+	position: absolute;
+	margin-top: 150px;
+	width: 100%;
+	text-align: center;
+}
+.headline h1{
+	width: 230px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 4px;
+	border-bottom: 1px solid #555;
+}
+
+.navigation {
+	position: absolute;
+	display: inline-block;
+	top: 50%;
+	left: 50%;
+	margin-top: -227px;
+	margin-left: -360px;
+}
+.box {
+	display: block;
+	background-color: #555;
+	cursor: pointer;
+	position: relative;
+	width: 120px;
+	height: 80px;
+	max-height: 80px;
+	margin: 9px;
+}
+.box span{
+	position: absolute;
+	bottom: 2px;
+	left: 4px;
+	right: 4px;
+	text-align: right;
+	text-decoration: none;
+	color: #333;
+	border-top: 1px solid #333;
+}
+.box:hover {
+	opacity: 0.7;
+}
+#about {
+	background-color: #A66867;
+}
+#blog {
+	background-color: #F0E2D6;
+}
+#projects {
+	background-color: #BF3942;
+}
+#music {
+	background-color: #F2E262;
+}
+#writing {
+	background-color: #80A6F0;
+}
+
+
+@media (max-width: 880px){
+	#about {
+		display: none;
+	}
+	.box {
+		display: inline-block;
+		width: 150px;
+		height: 100px;
+		margin: 12px;
+	}
+	.identifier {
+		top: 27%;
+	}
+	.navigation {
+		top: 95%;
+		width: 400px;
+		margin-left: -200px;
+		text-align: center;
+	}
 }
