--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 html,body{
 	margin: 0;
 	width: 100%;
-	height: 100%;
+}
+body {
+	background-color: #F0E2D6;
 }
 
 .grid-overlay {
 	display: none;
 	position: fixed;
+	top: 0;
 	pointer-events: none;
 	z-index: 100;
 	height: 100%;
@@ -26,22 +29,23 @@ html,body{
 
 h1, h2, a {
 	font-family: 'Oswald', sans-serif;
-	color: #333;
+	color: #211515;
 }
 .quote, p {
 	font-family: 'Vollkorn', serif;
 }
 
 .identifier {
-	position: absolute;
-	top: 47.5%;
+	margin-top: 80px;
+	position: relative;
 	width: 100%;
+	text-align: center;
 }
 .avatar {
-	position: absolute;
-	left: 50%;
-	margin-top: -160px;
-	margin-left: -160px;
+	position: relative;
+	margin: auto;
+	text-align: center;
+	display: inline-block;
 	border-radius: 100%;
 	-webkit-border-radius: 100%;
 	overflow: hidden;
@@ -106,11 +110,11 @@ h1, h2, a {
 .about-me {
 	position: absolute;
 	display: none;
-	left: 50%;
-	margin-top: -160px;
-	margin-left: -160px;
 	width: 320px;
 	height: 320px;
+	top: 0;
+	left: 50%;
+	margin-left: -160px;
 	-webkit-transform:rotateY(270deg);
 	transform:rotateY(270deg);
 	background-color: #999;
@@ -126,8 +130,8 @@ h1, h2, a {
 }
 
 .headline{
-	position: absolute;
-	margin-top: 150px;
+	/*position: absolute;*/
+	margin-top: 40px;
 	width: 100%;
 	text-align: center;
 }
@@ -135,59 +139,27 @@ h1, h2, a {
 	width: 230px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 0;
 	margin-bottom: 4px;
 	border-bottom: 1px solid #555;
 }
 
 .navigation {
-	position: absolute;
+	margin-top: 40px;
+	text-align: center;
+}
+.navigation a {
 	display: inline-block;
-	top: 50%;
-	left: 50%;
-	margin-top: -227px;
-	margin-left: -360px;
-}
-.box {
-	display: block;
-	background-color: #555;
+	font-size: 18px;
 	cursor: pointer;
-	position: relative;
-	width: 120px;
-	height: 80px;
-	max-height: 80px;
 	margin: 9px;
+	color: #643E3E;
 }
-.box span{
-	position: absolute;
-	bottom: 2px;
-	left: 4px;
-	right: 4px;
-	text-align: right;
-	text-decoration: none;
-	color: #333;
-	border-top: 1px solid #333;
-}
-.box:hover {
-	opacity: 0.7;
-}
-#about {
-	background-color: #A66867;
-}
-#blog {
-	background-color: #F0E2D6;
-}
-#projects {
-	background-color: #BF3942;
-}
-#music {
-	background-color: #F2E262;
-}
-#writing {
-	background-color: #80A6F0;
+.navigation a:hover {
+	color: #A66867;
 }
 
-
-@media (max-width: 880px){
+/*@media (max-width: 880px){
 	#about {
 		display: none;
 	}
@@ -200,10 +172,14 @@ h1, h2, a {
 	.identifier {
 		top: 27%;
 	}
+	.avatar, .avatar img, .avatar .overlay{
+		max-width: 80%;
+		height: auto;
+	}
 	.navigation {
 		top: 95%;
 		width: 400px;
 		margin-left: -200px;
 		text-align: center;
 	}
-}
+}*/
