--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 h1, h2, a {
 	font-family: 'Merriweather', serif;
-	color: #211515;
+	color: #321F1F;
 }
 .quote, p {
 	font-family: 'Vollkorn', serif;
@@ -134,6 +134,7 @@ h1, h2, a {
 	margin-top: 40px;
 	width: 100%;
 	text-align: center;
+	color: #321F1F;
 }
 .headline h1{
 	width: 280px;
@@ -141,7 +142,7 @@ h1, h2, a {
 	margin-right: auto;
 	margin-top: 0;
 	margin-bottom: 4px;
-	border-bottom: 1px solid #555;
+	border-bottom: 1px solid #321F1F;
 }
 
 .navigation {
