--- a/css/home.css
+++ b/css/home.css
@@ -1,40 +1,3 @@
-html,body{
-	margin: 0;
-	width: 100%;
-}
-body {
-	background-color: #F0E2D6;
-}
-
-.grid-overlay {
-	display: none;
-	position: fixed;
-	top: 0;
-	pointer-events: none;
-	z-index: 100;
-	height: 100%;
-	width: 100%;
-}
-.grid-overlay .grid-row{
-	height: 33.333%;
-	width: 100%;
-	border-bottom: 2px solid rgba(50,50,50,0.6);
-}
-.grid-overlay .grid-row .grid-col{
-	display: inline-block;
-	height: 100%;
-	width: 33.333%;
-	border-right: 2px solid rgba(50,50,50,0.6);
-}
-
-h1, h2, a {
-	font-family: 'Merriweather', serif;
-	color: #321F1F;
-}
-.quote, p {
-	font-family: 'Vollkorn', serif;
-}
-
 .identifier {
 	margin-top: 80px;
 	position: relative;
@@ -75,13 +38,13 @@ h1, h2, a {
 	width: 100%;
 }
 .social .twitter {
-	background-image: url(img/twitter.png);
+	background-image: url(../img/twitter.png);
 }
 .social .github {
-	background-image: url(img/github.png);
+	background-image: url(../img/github.png);
 }
 .social .instagram {
-	background-image: url(img/instagram.png);
+	background-image: url(../img/instagram.png);
 }
 
 .avatar:hover .social {
@@ -160,28 +123,3 @@ h1, h2, a {
 .navigation a:hover {
 	color: #A66867;
 }
-
-/*@media (max-width: 880px){
-	#about {
-		display: none;
-	}
-	.box {
-		display: inline-block;
-		width: 150px;
-		height: 100px;
-		margin: 12px;
-	}
-	.identifier {
-		top: 27%;
-	}
-	.avatar, .avatar img, .avatar .overlay{
-		max-width: 80%;
-		height: auto;
-	}
-	.navigation {
-		top: 95%;
-		width: 400px;
-		margin-left: -200px;
-		text-align: center;
-	}
-}*/
