--- a/css/home.css
+++ b/css/home.css
@@ -9,6 +9,9 @@
 	margin: auto;
 	text-align: center;
 	display: inline-block;
+	border-radius: 100%;
+	-webkit-border-radius: 100%;
+	overflow: hidden;
 }
 .avatar .social {
 	display: none;
@@ -35,7 +38,6 @@
 	width: 100%;
 }
 .social .twitter {
-	height: 36px;
 	background-image: url(../img/twitter.png);
 }
 .social .github {
@@ -49,10 +51,10 @@
 	display: block;
 }
 .avatar:hover .overlay{
-	position: absolute;
-	-webkit-border-radius: 100%;
 	border-radius: 100%;
+	-webkit-border-radius: 100%;
 	overflow: hidden;
+	position: absolute;
 	height: 100%;
 	width: 100%;
 	z-index: 10;
@@ -61,25 +63,11 @@
 .avatar:hover h1{
 	display: block;
 }
-.avatar .images {
-	width: 320px;
-	height: 320px;
-	position: relative;
-}
 .avatar img {
-	top: 0px;
-	left: 0px;
-	position: absolute;
 	max-width: 320px;
 	height: auto;
 	border-radius: 100%;
 	-webkit-border-radius: 100%;
-}
-.avatar #img1 {
-	z-index: 3;
-}
-.avatar #img2 {
-	z-index: 2;
 }
 
 .about-me {
