place holder homepage

--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-.identifier {
+/*.identifier {
 	margin-top: 80px;
 	position: relative;
 	width: 100%;
@@ -122,4 +122,4 @@
 }
 .navigation a:hover {
 	color: #A66867;
-}
+}*/
