--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -3,29 +3,19 @@ html,body{
 	width: 100%;
 }
 body {
-	background-color: #F0E2D6;
+	padding-top: 80px;
+	background: url(../img/atlanta-blur.jpg);
+	background-size: cover;
+}
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+a {
+	text-decoration: none;
 }
 
-.grid-overlay {
-	display: none;
-	position: fixed;
-	top: 0;
-	pointer-events: none;
-	z-index: 100;
-	height: 100%;
-	width: 100%;
-}
-.grid-overlay .grid-row{
-	height: 33.333%;
-	width: 100%;
-	border-bottom: 2px solid rgba(50,50,50,0.6);
-}
-.grid-overlay .grid-row .grid-col{
-	display: inline-block;
-	height: 100%;
-	width: 33.333%;
-	border-right: 2px solid rgba(50,50,50,0.6);
-}
 
 h1, h2, a {
 	font-family: 'Merriweather', serif;
@@ -36,27 +26,86 @@ h1, h2, a {
 }
 
 
-/*@media (max-width: 880px){
-	#about {
-		display: none;
-	}
-	.box {
-		display: inline-block;
-		width: 150px;
-		height: 100px;
-		margin: 12px;
-	}
-	.identifier {
-		top: 27%;
-	}
-	.avatar, .avatar img, .avatar .overlay{
-		max-width: 80%;
-		height: auto;
-	}
-	.navigation {
-		top: 95%;
-		width: 400px;
-		margin-left: -200px;
-		text-align: center;
-	}
-}*/
+nav {
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 80px;
+	background: #222;
+}
+
+.nav-inner {
+	padding: 0 50px;
+}
+.nav-inner a:hover {
+	color: #53DCCA;
+}
+
+.avatar {
+	float: left;
+	padding-top: 20px;
+}
+.avatar img {
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+	-webkit-border-radius: 100%;
+	overflow: hidden;
+}
+
+.name {
+	float: left;
+	font-size: 22px;
+	margin-left: 25px;
+	line-height: 80px;
+	color: #5A88E8;
+}
+
+nav ul {
+	float: left;
+	margin-left: 25px;
+}
+nav ul > li{
+	display: inline-block;
+}
+nav ul > li > a {
+	line-height: 80px;
+}
+.social .link {
+	display: inline-block;
+	background-repeat: no-repeat;
+	width: 30px;
+	height: 30px;
+	line-height: 80px;
+}
+.social .twitter {
+	height: 24px;
+	background-image: url(../img/twitter.png);
+}
+.social .github {
+	background-image: url(../img/github.png);
+}
+.social .instagram {
+	background-image: url(../img/instagram.png);
+}
+
+.container {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(34,34,34,0.75);
+}
+.container .quote-container {
+	display: table;
+	height: 100%;
+	width: 100%;
+}
+.container h1 {
+	max-width: 10em;
+	height: 50px;
+	font-size: 64px;
+	color: white;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
